# rhdh-sidekick

./: .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pizza.md  pyproject.toml
.claude/: settings.json
.claude/commands/: commit.md  plan.md
.cursor/rules/: architecture-patterns.mdc  code-quality.mdc  commit-standards.mdc  development-workflow.mdc  documentation-standards.mdc  logging-configuration.mdc  planning-process.mdc  project-overview.mdc
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  test.yml
docs/: GDRIVE_TOOLKIT.md  README.md  architecture.md  bdd.md  blueprint_python_cli_package.md  configuration.md  creating-agents.md  logging.md  sidekick.md  testing.md
docs/plans/: agent-refactoring-mixins.md  agno-search-agent.md  release-notes-agent.md  research-command.md
knowledge/: README.md  sources.yaml.example
knowledge/rag/rhdh/about/: index.md
knowledge/rag/rhdh/adoption-insights/: index.md
knowledge/rag/rhdh/audit-log/: index.md
knowledge/rag/rhdh/authentication/: index.md
knowledge/rag/rhdh/authorization/: index.md
knowledge/rag/rhdh/configuring/: index.md
knowledge/rag/rhdh/customizing/: index.md
knowledge/rag/rhdh/install-rhdh-air-gapped/: index.md
knowledge/rag/rhdh/install-rhdh-aks/: index.md
knowledge/rag/rhdh/install-rhdh-eks/: index.md
knowledge/rag/rhdh/install-rhdh-gke/: index.md
knowledge/rag/rhdh/install-rhdh-ocp/: index.md
knowledge/rag/rhdh/install-rhdh-osd-gcp/: index.md
knowledge/rag/rhdh/monitoring-and-logging/: index.md
knowledge/rag/rhdh/plugin-rhdh/: index.md
knowledge/rag/rhdh/plugins-rhdh-about/: index.md
knowledge/rag/rhdh/plugins-rhdh-configure/: index.md
knowledge/rag/rhdh/plugins-rhdh-install/: index.md
knowledge/rag/rhdh/plugins-rhdh-reference/: index.md
knowledge/rag/rhdh/plugins-rhdh-using/: index.md
scratch/: README.md  debug_logs.py  export_gdoc_all_formats.py  gdrive_example.py  image_analysis_team.py  image_team.py  langfuse.py  level_3_agent.py  level_4_team.py  level_5_workflow.py  memory_session_summary.py  metrics.py  playground.py  prompt_templates_demo.py  research_agent.py  research_agent_team.py  response.py  response_streaming.py  session_state_in_db.py  session_state_in_instructions.py  sessions.py  shopping_list.py  test_gcs_access.py  test_image_team.py  test_junit_xml_parsing.py  test_png_images.py  test_sidekick_gcs.py
src/sidekick/: __init__.py  commands.py  memory_config.py  settings.py
src/sidekick/agents/: __init__.py  base.py  github_agent.py  jira_agent.py  jira_knowledge.py  jira_triager_agent.py  knowledge.py  release_manager.py  release_notes_agent.py  research.py  search_agent.py  test_analysis_agent.py
src/sidekick/cli/: CLAUDE.md  __init__.py  app.py  base.py  chat.py  gdrive.py  github.py  jira.py  jira_triager.py  knowledge.py  prompts.py  release_notes.py  research.py  search.py  tag_team.py  test_analysis.py
src/sidekick/knowledge/: __init__.py  base.py  chunking.py  config.py  gdrive.py  git.py  manager.py  manifest.py  web.py
src/sidekick/prompts/: README.md  __init__.py  base.py  loaders.py  registry.py
src/sidekick/teams/: __init__.py  tag_team.py  test_analysis_team.py
src/sidekick/tools/: __init__.py  gdrive_toolkit.py  jira.py  state_management.py  test_analysis.py
src/sidekick/utils/: __init__.py  gdrive.py  jira_client_utils.py  storage.py  test_analysis.py
src/sidekick/workflows/: __init__.py  release_notes.py  research_workflow.py
tests/: __init__.py  conftest.py  test_prompt_templates.py
tests/bdd/: __init__.py  conftest.py  test_cli_help.py  test_research.py  test_search.py
tests/bdd/features/: __init__.py  cli_help.feature  research.feature  search.feature
tests/bdd/steps/: __init__.py  cli_help_steps.py  research_steps.py  search_steps.py
tests/e2e/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_commands.py  test_research_command.py  test_settings.py
(+27 files in other folders)
